# wrs-plugin

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
controller/: CMakeLists.txt  JoyTopicSubscriberController.cpp
model/Gen2/: LICENSE
model/Gen3/: LICENSE
model/Gen3lite/: LICENSE
model/HobbyDrone/: HobbyDrone.body
model/Husky/: LICENSE
model/Jackal/: LICENSE
model/SpotCR/: LICENSE
project/: AGXSimulator.cnoid  AISTSimulator.cnoid  AizuSpiderDA.cnoid  AizuSpiderDS.cnoid  AizuSpiderNA.cnoid  AizuSpiderNS.cnoid  AizuSpiderSA.cnoid  AizuSpiderSS.cnoid  DefaultView.cnoid  DoubleArmV7A.cnoid  DoubleArmV7S.cnoid  Floor.cnoid  HobbyDrone.cnoid  Husky.cnoid  Jackal.cnoid  SpotCR.cnoid  WAREC1.cnoid
project/wrs2020/: AGXSimulator.cnoid  AISTSimulator.cnoid  TS1.cnoid  TS2.cnoid  TS3.cnoid  TS4.cnoid
project/wrs2025/: AGXSimulator.cnoid  AISTSimulator.cnoid
project/wrs2025/M3/: M3.cnoid
project/wrs2025/PS/: A1-Hard.cnoid  A1.cnoid  A2-Hard.cnoid  A2.cnoid  A3-Hard.cnoid  A3.cnoid  A4-Hard.cnoid  A4.cnoid  Common.cnoid
project/wrs2025/project_20251009/: A1.cnoid  A2.cnoid  A3.cnoid  A4.cnoid
project/wrs2025/project_20251010/: A1.cnoid  A2.cnoid  A3.cnoid  A4.cnoid
project/wrs2025/project_20251011/: A1-Hard.cnoid  A2-Hard.cnoid  A3-Hard.cnoid  A4-Hard.cnoid  vfx_events.yaml
project/wrs2025/project_20251012/: A1-Hard.cnoid  A2-Hard.cnoid  A3-Hard.cnoid  A4-Hard.cnoid  AGXSimulator.cnoid  AISTSimulator.cnoid
registration/: registration_test.yaml  registration_wrs2020.yaml  registration_wrs2025.yaml
sample/: CMakeLists.txt
sample/LivePlaybackPlugin/: CMakeLists.txt
sample/WRS2020/: CMakeLists.txt
sample/WRS2020/project/: AizuSpiderDA.cnoid  Common.cnoid  DoubleArmV7A.cnoid  RefereeView.cnoid
sample/WRS2020/src/: CMakeLists.txt
sample/WRS2020/src/WRS2020Plugin/: CMakeLists.txt  WRS2020Plugin.cpp
sample/wrs-sample-crawler/controller/: CMakeLists.txt  MonoCrawlerJoystickController.cpp
sample/wrs-sample-crawler/model/: MonoCrawler2NA.body  MonoCrawler2NS.body  MonoCrawlerNA.body  MonoCrawlerNS.body
sample/wrs-sample-crawler/project/: MonoCrawler2NA.cnoid  (+3 more)
share/default/: materials.yaml
src/: CMakeLists.txt
src/LivePlaybackPlugin/: LivePlaybackBar.cpp  LivePlaybackBar.h  LivePlaybackPlugin.cpp  exportdecl.h  gettext.h
src/WRSPlugin/: CMakeLists.txt  WRSPlugin.cpp
(+5 files in other folders)
