if(NOT ENABLE_GUI)
  return()
endif()

option(BUILD_WRS_PLUGIN "Building WRSPlugin" ON)
if(NOT BUILD_WRS_PLUGIN)
  return()
endif()

add_subdirectory(src)

find_package(ament_cmake QUIET)
if(ament_cmake_FOUND)
  find_package(ament_cmake REQUIRED)
  find_package(rclcpp REQUIRED)
  find_package(sensor_msgs REQUIRED)
  add_subdirectory(controller)
else()
  message(STATUS "ament_cmake not found.")
endif()